--- a/src/DemoBlazorTheme.Web/Pages/_Layout.cshtml
+++ b/src/DemoBlazorTheme.Web/Pages/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="DemoBlazorTheme.Web.styles.css" rel="stylesheet" />
+    <link href="_content/DemoBlazorTheme.Lib/css/site.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
