--- a/src/DemoBlazorTheme.Web/Pages/Index.razor
+++ b/src/DemoBlazorTheme.Web/Pages/Index.razor
@@ -6,6 +6,12 @@
 
 Welcome to your new app.
 
-<DemoButton>DemoButton</DemoButton>
+<div style="margin: 10px;">
+    <DemoButton>DemoButton</DemoButton>
+</div>
+
+<div style="margin: 10px;">
+    <DemoMudButton>DemoMudButton</DemoMudButton>
+</div>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
