--- a/src/DemoBlazorTheme.Web/Shared/MainLayout.razor
+++ b/src/DemoBlazorTheme.Web/Shared/MainLayout.razor
@@ -2,6 +2,15 @@
 
 <PageTitle>DemoBlazorTheme.Web</PageTitle>
 
+@* Required *@
+<MudThemeProvider />
+
+@* Needed for dialogs *@
+<MudDialogProvider />
+
+@* Needed for snackbars *@
+<MudSnackbarProvider />
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
