--- a/src/DemoBlazorTheme.Lib/wwwroot/css/site.css
+++ b/src/DemoBlazorTheme.Lib/wwwroot/css/site.css
@@ -1,5 +1,10 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+:root {
+    --mud-palette-primary: #d45500 !important;
+    --mud-palette-secondary: #da986c !important;
+}
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
