--- a/src/DemoBlazorTheme.Web/Pages/Index.razor
+++ b/src/DemoBlazorTheme.Web/Pages/Index.razor
@@ -2,6 +2,8 @@
 
 <PageTitle>Index</PageTitle>
 
+<MudAppBar Color="Color.Primary"></MudAppBar>
+
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
@@ -12,6 +14,10 @@ Welcome to your new app.
 
 <div style="margin: 10px;">
     <DemoMudButton>DemoMudButton</DemoMudButton>
+</div>
+
+<div style="margin: 10px;">
+    <MudButton Variant="Variant.Filled" Color="Color.Secondary">MudButton</MudButton>
 </div>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
